--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -21,14 +21,21 @@
     "technicalFine": "€50,000 : Maximum technical fine (renewable every 6 months).",
     "declarationFine": "€25,000 : Fine for failure to provide accessibility statement.",
     "accessibilityScore": "Accessibility Score",
+    "complianceRate": "Compliance Rate",
+    "excludingNA": "Excluding N/A criteria",
     "violationsDetected": "Violations Detected",
     "problems": "Issues",
+    "criteria": "Criteria",
     "ecoDesign": "Eco-Design",
     "rgaaStatistics": "RGAA Criteria Statistics",
     "totalCriteria": "Total Criteria",
+    "analyzed": "Analyzed",
     "compliant": "Compliant",
     "nonCompliant": "Non-Compliant",
+    "notApplicable": "Not Applicable",
+    "needsReview": "Needs Review",
     "toVerify": "To Verify",
+    "complianceBreakdown": "Compliance Breakdown",
     "testMethodBreakdown": "Breakdown by Test Method",
     "automated": "Automated",
     "hybrid": "Hybrid",
@@ -39,16 +46,31 @@
     "title": "106 RGAA 4.1 Criteria",
     "compliant": "Compliant",
     "nonCompliant": "Non-Compliant",
+    "notApplicable": "Not Applicable",
+    "needsReview": "Needs Review",
     "manualVerification": "Manual Verification",
     "aiVerification": "AI Verification",
     "notTested": "Not Tested",
     "searchPlaceholder": "Search for a criterion...",
     "all": "All",
     "noResults": "No criteria match your search.",
+    "issuesDetected": "Issues Detected",
     "violationsDetected": "Violations Detected",
+    "affectedElements": "Affected Elements",
     "aiAnalysis": "AI Analysis",
+    "reasoning": "Analysis",
+    "recommendations": "Recommendations",
+    "howToFix": "How to Fix",
+    "riskLevel": "Risk Level",
+    "financialImpact": "Financial Impact",
+    "brandImpact": "Brand Impact",
+    "confidence": "confidence",
     "wcagReferences": "WCAG References",
     "statusLabels": {
+      "compliant": "Compliant",
+      "nonCompliant": "Non-Compliant",
+      "notApplicable": "Not Applicable",
+      "needsReview": "Needs Review",
       "passed": "Compliant",
       "failed": "Non-Compliant",
       "requiresManual": "Manual Verification",
