--- a/frontend/src/i18n/locales/fr.json
+++ b/frontend/src/i18n/locales/fr.json
@@ -21,14 +21,21 @@
     "technicalFine": "€50,000 : Amende technique max (renouvelable tous les 6 mois).",
     "declarationFine": "€25,000 : Amende pour défaut de déclaration d'accessibilité.",
     "accessibilityScore": "Score Accessibilité",
+    "complianceRate": "Taux de Conformité",
+    "excludingNA": "Hors critères N/A",
     "violationsDetected": "Violations Détectées",
     "problems": "Problèmes",
+    "criteria": "Critères",
     "ecoDesign": "Éco-Conception",
     "rgaaStatistics": "Statistiques des Critères RGAA",
     "totalCriteria": "Total Critères",
+    "analyzed": "Analysés",
     "compliant": "Conformes",
     "nonCompliant": "Non-Conformes",
+    "notApplicable": "Non Applicable",
+    "needsReview": "À Vérifier",
     "toVerify": "À Vérifier",
+    "complianceBreakdown": "Répartition de la Conformité",
     "testMethodBreakdown": "Répartition par Méthode de Test",
     "automated": "Automatisés",
     "hybrid": "Hybrides",
@@ -39,16 +46,31 @@
     "title": "106 Critères RGAA 4.1",
     "compliant": "Conformes",
     "nonCompliant": "Non-Conformes",
+    "notApplicable": "Non Applicable",
+    "needsReview": "À Vérifier",
     "manualVerification": "Vérification Manuelle",
     "aiVerification": "Vérification IA",
     "notTested": "Non Testés",
     "searchPlaceholder": "Rechercher un critère...",
     "all": "Tous",
     "noResults": "Aucun critère ne correspond à votre recherche.",
+    "issuesDetected": "Problèmes Détectés",
     "violationsDetected": "Violations Détectées",
+    "affectedElements": "Éléments Affectés",
     "aiAnalysis": "Analyse IA",
+    "reasoning": "Analyse",
+    "recommendations": "Recommandations",
+    "howToFix": "Comment Corriger",
+    "riskLevel": "Niveau de Risque",
+    "financialImpact": "Impact Financier",
+    "brandImpact": "Impact sur la Marque",
+    "confidence": "confiance",
     "wcagReferences": "Références WCAG",
     "statusLabels": {
+      "compliant": "Conforme",
+      "nonCompliant": "Non-Conforme",
+      "notApplicable": "Non Applicable",
+      "needsReview": "À Vérifier",
       "passed": "Conforme",
       "failed": "Non-Conforme",
       "requiresManual": "Vérification Manuelle",
